<resources>
    <string name="app_name">Lyrical Notes</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="entrar">Entrar</string>
    <string name="registrarse">Registrarse</string>
    <string name="guardar_nota">Guardar nota</string>
    <string name="nombre">Nombre</string>
    <string name="borrar_nota">Borrar nota</string>
    <string name="buscar_rima">Buscar rima</string>
    <string name="contrasena">Contraseña</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="confirmar_contrasena">Confirmar contraseña</string>
    <string name="nombre_estructura">Nombre estructura</string>
    <string name="info">Info</string>
</resources>
